<resources>
    <string name="app_name">CBR__Fitness</string>
    <string name="username">Username:</string>
    <string name="username_placeholder">Username</string>
    <string name="age">Alter:</string>
    <string name="age_placeholder">Alter</string>
    <string name="create_user">Account erstellen</string>
    <string name="create">Create</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="physical_restrictions">Physische Restriktionen:</string>
    <string name="placeholder">…</string>
    <string name="workout_duration_min">Workout duration(min.):</string>
    <string name="mesomorph">Mesomorph</string>
    <string name="body_weight">Koerper Gewicht:</string>
    <string name="pro">Pro</string>
    <string name="password">Password:</string>
    <string name="password_placeholder">Passwort</string>
    <string name="female">Female</string>
    <string name="beginner">Beginner</string>
    <string name="workout_type">Workout type:</string>
    <string name="diverse">Diverse</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="advanced">Advanced</string>
    <string name="workouts">Workouts</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_workout">Create Workout</string>
    <string name="generate_workout">Generiere Workout</string>
    <string name="no_name_found">No Name Found</string>
    <string name="no_goal_found">No Goal Found</string>
    <string name="muscle_group">Muskelgruppe</string>
    <string name="workout_ziel">Workout Ziel</string>
    <string name="edit">Edit</string>
    <string name="exercise_image_text">Exercise Image</string>
    <string name="target_duration">Zieldauer</string>
    <string name="minutes_short">Min.</string>
    <string name="equipment">Equipment</string>
    <string name="placeholder_weight">Platzhalter Gewicht</string>
    <string name="label_sets">Sets</string>
    <string name="label_weight">Gewicht</string>
    <string name="label_reps">Reps</string>
    <string name="label_break">Pause</string>
    <string name="number_placeholder">0</string>
    <string name="body_height">Groesse:</string>
    <string name="body_height_placeholder">Groesse</string>
    <string name="weight_placeholder">Gewicht</string>
    <string name="name_placeholder">Name</string>
    <string name="gender_placeholder">Geschlecht</string>
    <string name="bmi_placeholder">BMI</string>
    <string name="workout_type_placeholder">Workout Type</string>
    <string name="user_to_csv_button">UserToCSV</string>
    <string name="label_similarity">Sim:</string>
    <string name="label_duration">Dauer:</string>
    <string name="add_cbr_exercise_result_button">Hinzufuegen</string>
    <string name="workout_goal_label">Workout Ziel:</string>
    <string name="exchange_label">Austausch</string>
    <string name="prime_muscle_label">Primär Muskel:</string>
    <string name="secondary_muscle_label">Sekundär Muskel:</string>
    <string name="equipment_label">Equipment:</string>
    <string name="prime_muscle_placeholder">Prime Muscle</string>
    <string name="secondary_muscle_placeholder">Secondary Muscle</string>
    <string name="equipment_placeholder">Equipment</string>
    <string name="choose_equipment_label">Wählen sie das Equipmemnt:</string>
    <string name="exchange_exercises_label">Tausche Übung</string>
    <string name="movement_type_placeholder">Bewegungsart</string>
    <string name="exercise_to_csv_label">ExerciseToCSV</string>
    <string name="goal_label">Ziel:</string>
    <string name="delete_label">Löschen</string>
    <string name="label_create">Erstellen</string>
    <string name="label_name">Name</string>
    <string name="warm_up_notice_text">Beginnen sie das Workout mit 5-10Min an Aufwährmübungen.</string>
</resources>