<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_show_exercise"
    tools:context=".fragments.ShowExercise">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/image_show_exercise"
        android:contentDescription="@string/exercise_image_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_description_box_show_exercise"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintVertical_weight="3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_prime_muscle_show_exercise"
        android:text="@string/prime_muscle_placeholder"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_secondary_muscle_show_exercise"
        android:text="@string/secondary_muscle_placeholder"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_prime_muscle_show_exercise"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_movement_type_show_exercise"
        android:text="@string/movement_type_placeholder"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_secondary_muscle_show_exercise"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_equipment_show_exercise"
        android:text="@string/equipment_placeholder"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_prime_muscle_show_exercise"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_exercise_type_show_exercise"
        android:text="@string/equipment_placeholder"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_prime_muscle_show_exercise"
        app:layout_constraintStart_toEndOf="@id/text_equipment_show_exercise"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hello_blank_fragment"
        android:id="@+id/text_description_box_show_exercise"
        android:layout_marginEnd="5dp"
        android:textSize="@dimen/target_text_size_small"
        app:layout_constraintTop_toBottomOf="@id/image_show_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_label_set_show_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintVertical_weight="7"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_sets"
        android:id="@+id/text_label_set_show_exercise"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/target_text_size"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/image_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_description_box_show_exercise"
        app:layout_constraintBottom_toTopOf="@id/text_set_show_exercise"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="4"/>

    <TextView
        android:id="@+id/text_set_show_exercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/number_placeholder"
        android:textAlignment="center"
        android:textSize="@dimen/target_text_size"
        app:layout_constraintBottom_toTopOf="@id/text_label_rep_show_exercise"
        app:layout_constraintEnd_toStartOf="@+id/text_description_box_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_label_set_show_exercise"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_reps"
        android:id="@+id/text_label_rep_show_exercise"
        android:textSize="@dimen/target_text_size"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_set_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_rep_show_exercise"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_placeholder"
        android:id="@+id/text_rep_show_exercise"
        android:textSize="@dimen/target_text_size"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_label_rep_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_label_break_show_exercise"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_break"
        android:id="@+id/text_label_break_show_exercise"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/target_text_size"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_rep_show_exercise"
        app:layout_constraintBottom_toTopOf="@id/text_break_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_placeholder"
        android:id="@+id/text_break_show_exercise"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/target_text_size"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/text_label_break_show_exercise"
        app:layout_constraintBottom_toTopOf="@+id/text_label_weight_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintVertical_weight="2"/>


    <TextView
        android:id="@+id/text_label_weight_show_exercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/label_weight"
        android:textSize="@dimen/target_text_size"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/text_weight_show_exercise"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_break_show_exercise"
        app:layout_constraintVertical_weight="2"/>

    <TextView
        android:id="@+id/text_weight_show_exercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/number_placeholder"
        android:textSize="@dimen/target_text_size"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_description_box_show_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_weight_show_exercise"
        app:layout_constraintVertical_weight="2"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floating_edit_show_exercise"
        android:src="@drawable/ic_edit"
        android:backgroundTint="@color/darkGrayRecycler"
        android:contentDescription="@string/edit"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>