<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_edit_exercise_list"
    tools:context=".fragments.EditExerciseList">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_label_goal_label_edit_exercise_list"
        android:text="@string/goal_label"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/target_text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_label_muscle_group_label_edit_exercise_list"
        app:layout_constraintEnd_toStartOf="@id/text_goal_edit_exercise_list"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_goal_found"
        android:id="@+id/text_goal_edit_exercise_list"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/target_text_size_small"
        android:gravity = "center"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintTop_toTopOf="@id/text_label_goal_label_edit_exercise_list"
        app:layout_constraintStart_toEndOf="@id/text_label_goal_label_edit_exercise_list"
        app:layout_constraintBottom_toBottomOf="@id/text_label_goal_label_edit_exercise_list"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_label_muscle_group_label_edit_exercise_list"
        android:text="@string/prime_muscle_label"
        android:textSize="@dimen/target_text_size_small"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@id/text_muscle_group_edit_exercises_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_label_goal_label_edit_exercise_list" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/text_muscle_group_edit_exercises_list"
        android:text="@string/app_name"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/target_text_size_small"
        android:gravity = "center"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/text_label_muscle_group_label_edit_exercise_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_label_muscle_group_label_edit_exercise_list"
        app:layout_constraintBottom_toBottomOf="@id/text_label_muscle_group_label_edit_exercise_list"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_label_duration_edit_exercise_list"
        android:text="@string/target_duration"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/target_text_size_small"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_label_muscle_group_label_edit_exercise_list"
        app:layout_constraintEnd_toStartOf="@id/text_duration_edit_exercise_list"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_name_found"
        android:id="@+id/text_duration_edit_exercise_list"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/target_text_size_small"
        android:gravity = "center"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/text_label_duration_edit_exercise_list"
        app:layout_constraintTop_toTopOf="@id/text_label_duration_edit_exercise_list"
        app:layout_constraintEnd_toEndOf="parent" />



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/recycler_edit_exercises_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@id/text_duration_edit_exercise_list">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>